# TP-MES

./: README.md  compare_comments.py  comprehensive_comment_analysis.py  generate_comments.py  generate_metrics.py  generate_visualizations.py  remove_comments.py  requirements_analysis.txt  run_complete_analysis.py
grpc-no-comments/: BUILDING.md  (+16 more)
grpc-no-comments/examples/python/compression/: BUILD.bazel  client.py  helloworld_pb2.py  server.py
grpc-no-comments/examples/python/compression/test/: compression_example_test.py
grpc-no-comments/examples/python/observability/csm/: BUILD.bazel  Dockerfile.client  Dockerfile.server  csm_greeter_client.py  csm_greeter_server.py
grpc-no-comments/examples/python/xds/: BUILD.bazel  Dockerfile.client  Dockerfile.server  client.py  requirements.txt  server.py
grpc-no-comments/src/python/grpcio/grpc/experimental/: BUILD.bazel  __init__.py  gevent.py  session_cache.py
grpc-no-comments/src/python/grpcio/grpc/experimental/aio/: __init__.py
grpc-no-comments/src/python/grpcio_csm_observability/grpc_csm_observability/: BUILD.bazel  __init__.py  _csm_observability_plugin.py
grpc-no-comments/src/python/grpcio_tests/tests/: BUILD.bazel  __init__.py  _loader.py  _result.py  _runner.py  bazel_namespace_package_hack.py
grpc-no-comments/src/python/grpcio_tests/tests/_sanity/: _sanity_test.py
grpc-no-comments/src/python/grpcio_tests/tests/admin/: BUILD.bazel  admin_test.py
grpc-no-comments/src/python/grpcio_tests/tests/channelz/: BUILD.bazel  _channelz_servicer_test.py
grpc-no-comments/src/python/grpcio_tests/tests/csds/: BUILD.bazel  __init__.py  csds_test.py
grpc-no-comments/src/python/grpcio_tests/tests/fork/: BUILD.bazel  __init__.py  _fork_interop_test.py  client.py  methods.py  native_debug.pyx
grpc-no-comments/src/python/grpcio_tests/tests/health_check/: BUILD.bazel  _health_servicer_test.py
grpc-no-comments/src/python/grpcio_tests/tests/http2/: negative_http2_client.py
grpc-no-comments/src/python/grpcio_tests/tests/interop/: BUILD.bazel  _insecure_intraop_test.py  _intraop_test_case.py  _secure_intraop_test.py  client.py  methods.py  resources.py  server.py  service.py
grpc-no-comments/src/python/grpcio_tests/tests/interop/credentials/: BUILD.bazel
grpc-no-comments/src/python/grpcio_tests/tests/observability/: BUILD.bazel  __init__.py  _csm_observability_plugin_test.py  _from_csm_observability_import_star.py  _from_observability_import_star.py  _observability_api_test.py  _observability_plugin_test.py  _open_telemetry_observability_test.py  _test_server.py
grpc-no-comments/src/python/grpcio_tests/tests/protoc_plugin/: _python_plugin_test.py  _split_definitions_test.py  beta_python_plugin_test.py
grpc-no-comments/src/python/grpcio_tests/tests/protoc_plugin/protos/invocation_testing/: compiler.proto  same.proto
grpc-no-comments/src/python/grpcio_tests/tests/protoc_plugin/protos/invocation_testing/split_services/: services.proto
grpc-no-comments/src/python/grpcio_tests/tests/protoc_plugin/protos/payload/: test_payload.proto
grpc-no-comments/src/python/grpcio_tests/tests/protoc_plugin/protos/responses/: test_responses.proto
grpc-no-comments/src/python/grpcio_tests/tests/protoc_plugin/protos/service/: test_service.proto
grpc-no-comments/src/python/grpcio_tests/tests/qps/: BUILD.bazel  benchmark_client.py  benchmark_server.py  client_runner.py  histogram.py  qps_worker.py  worker_server.py
grpc-no-comments/src/python/grpcio_tests/tests/reflection/: BUILD.bazel  _reflection_client_test.py  _reflection_servicer_test.py
grpc-no-comments/src/python/grpcio_tests/tests/status/: BUILD.bazel  _grpc_status_test.py
grpc-no-comments/src/python/grpcio_tests/tests/stress/: BUILD.bazel  client.py  metrics_server.py  test_runner.py  unary_stream_benchmark.proto  unary_stream_benchmark.py
grpc-no-comments/src/python/grpcio_tests/tests/testing/: BUILD.bazel  __init__.py  _application_common.py  _application_testing_common.py  _client_application.py  _client_test.py  _server_application.py  _server_test.py  _time_test.py
grpc-no-comments/src/python/grpcio_tests/tests/testing/proto/: requests.proto  services.proto
grpc-no-comments/src/python/grpcio_tests/tests/unit/: BUILD.bazel  _abort_test.py  _api_test.py  _auth_context_test.py  _auth_test.py  _channel_args_test.py  _channel_close_test.py  _channel_connectivity_test.py  _channel_ready_future_test.py  _compression_test.py  _contextvars_propagation_test.py  _credentials_test.py  _dns_resolver_test.py  _dynamic_stubs_test.py  _empty_message_test.py  _error_message_encoding_test.py  _exit_scenarios.py  _exit_test.py  _from_grpc_import_star.py  _grpc_shutdown_test.py  _interceptor_test.py  _invalid_metadata_test.py  _invocation_defects_test.py  _local_credentials_test.py  _logging_test.py  _metadata_code_details_test.py  _metadata_flags_test.py  _metadata_test.py  _reconnect_test.py  _resource_exhausted_test.py  _rpc_part_1_test.py  _rpc_part_2_test.py  _rpc_test_helpers.py  _server_shutdown_scenarios.py  _server_shutdown_test.py  _server_ssl_cert_config_test.py  _server_test.py  _server_wait_for_termination_test.py  _session_cache_test.py  _signal_client.py  (+9 more)
grpc-no-comments/src/python/grpcio_tests/tests/unit/_cython/: BUILD.bazel  _cancel_many_calls_test.py  _channel_test.py  _common.py  _fork_test.py  _no_messages_server_completion_queue_per_call_test.py  _no_messages_single_server_completion_queue_test.py  _read_some_but_not_all_responses_test.py  _server_test.py  cygrpc_test.py  test_utilities.py
grpc-no-comments/src/python/grpcio_tests/tests/unit/beta/: _beta_features_test.py  _connectivity_channel_test.py  _implementations_test.py  _not_found_test.py  _utilities_test.py  test_utilities.py
grpc-no-comments/src/python/grpcio_tests/tests/unit/data/foo/: bar.proto  bar_with_wkt.proto
grpc-no-comments/src/python/grpcio_tests/tests/unit/framework/common/: BUILD.bazel  __init__.py  test_constants.py  test_control.py  test_coverage.py
grpc-no-comments/src/python/grpcio_tests/tests/unit/framework/foundation/: BUILD.bazel  _logging_pool_test.py  stream_testing.py
(+9251 files in other folders)
