# Copyright 2019 The gRPC Authors

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_binary(
    name = "server",
    srcs = ["server.py"],
    python_version = "PY3",
    srcs_version = "PY2AND3",
    deps = [
        "//examples/protos:helloworld_py_pb2",
        "//examples/protos:helloworld_py_pb2_grpc",
        "//src/python/grpcio/grpc:grpcio",
    ],
)

py_binary(
    name = "client",
    srcs = ["client.py"],
    python_version = "PY3",
    srcs_version = "PY2AND3",
    deps = [
        "//examples/protos:helloworld_py_pb2",
        "//examples/protos:helloworld_py_pb2_grpc",
        "//src/python/grpcio/grpc:grpcio",
    ],
)

py_test(
    name = "test/compression_example_test",
    size = "small",
    srcs = ["test/compression_example_test.py"],
    data = [
        ":client",
        ":server",
    ],
    python_version = "PY3",
    srcs_version = "PY2AND3",
)
