# Copyright 2024 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

load("@grpc_python_dependencies//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//:__subpackages__"])

py_library(
    name = "csm_observability",
    srcs = glob(["*.py"]),
    imports = [
        ".",
        "../",
    ],
    srcs_version = "PY3ONLY",
    deps = [
        requirement("opentelemetry-resourcedetector-gcp"),
        requirement("opentelemetry-sdk"),
        "//src/python/grpcio/grpc:grpcio",
        "//src/python/grpcio_observability/grpc_observability:pyobservability",
        "@com_google_protobuf//:protobuf_python",
    ],
)
