# Copyright 2021 The gRPC Authors

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "bazel_namespace_package_hack",
    srcs = ["bazel_namespace_package_hack.py"],
    visibility = [
        "//examples/python/errors:__subpackages__",
        "//src/python/grpcio_tests/tests/interop:__subpackages__",
        "//src/python/grpcio_tests/tests/status:__subpackages__",
    ],
)
