# Copyright 2021 The gRPC Authors

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "aio",
    srcs = glob(["aio/**/*.py"]),
    deps = [
        "//src/python/grpcio/grpc/_cython:cygrpc",
    ],
)

py_library(
    name = "experimental",
    srcs = ["__init__.py"],
    deps = [
        ":aio",
        ":gevent",
        ":session_cache",
    ],
)

py_library(
    name = "gevent",
    srcs = ["gevent.py"],
    deps = [
        "//src/python/grpcio/grpc/_cython:cygrpc",
    ],
)

py_library(
    name = "session_cache",
    srcs = ["session_cache.py"],
    deps = [
        "//src/python/grpcio/grpc/_cython:cygrpc",
    ],
)
